--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,50 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+#contentContainer {
+    background-color: red;
+    height: 100vh;
+    width: 100vw;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+}
+
+#sidebar {
+    background-color: purple;
+}
+
+#projectsHeader {
+    display: flex;
+    gap: 5px;
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 50px;
+    justify-content: space-between;
+    padding: 0px 20px 10px 20px;
+}
+
+#btnAddProject {
+     font-size: 30px;
+     display: flex;
+     align-items: center;
+}
+
+#btnAddProject img {
+    height: 30px;
+    width: 30px;
+    padding: 5px;
+}
+
+#projectContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 50px;
+}
+
+#pageContent {
+    background-color: green;
+}
