--- a/src/styles.css
+++ b/src/styles.css
@@ -66,4 +66,14 @@
 
 #pageContent {
     background-color: #4c86a8;
+    display: flex;
+    flex-direction: column;
+}
+
+#projectHeading {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    font-size: 50px;
+    border-bottom: 10px ridge #6F9283;
 }
