--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,7 @@
 
 #sidebar {
     background-color: #f1f1f1;
+    border-right: 1px solid black;
 }
 
 #projectsHeader {
@@ -76,4 +77,20 @@
     margin-top: 50px;
     font-size: 50px;
     border-bottom: 10px ridge #6F9283;
+}
+
+#tasksContainer {
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+#task {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    background-color: white;
+    border: 2px solid black;
+    box-shadow: 5px 5px 8px #6F9283, 10px 10px 8px gray;
 }
