--- a/src/styles.css
+++ b/src/styles.css
@@ -48,6 +48,7 @@
   padding-right: 20px;
   padding-bottom: 40px;
   margin-bottom: 10px;
+  cursor: pointer;
 }
 
 #projectContainer p {
@@ -89,10 +90,30 @@
 .task {
   display: flex;
   gap: 20px;
-  align-items: center;
   background-color: white;
   border: 1px solid black;
   box-shadow: 5px 5px 8px rgb(49, 49, 49);
+  justify-content: space-between;
+  align-items: stretch;
+}
+
+.taskContent h2 {
+    margin-bottom: 10px;
+}
+
+.taskContent {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    width: 100%;
+}
+
+.taskContent p {
+    margin-bottom: 10px;
+}
+
+.btnDeleteTask {
+    margin-right: 15px;
 }
 
 .lowPriority {
@@ -106,3 +127,23 @@
 .highPriority {
   border-top: 15px solid rgb(236, 31, 31);
 }
+
+#checkboxContainer {
+    margin: 15px;
+}
+
+#taskCheckbox {
+    width: 22px;
+    height: 22px;
+    cursor: pointer;
+}
+
+.btnDeleteTask img{
+    margin-top: 5px;
+    height: 20px;
+    width: auto;
+    color: red;
+    cursor: pointer;
+}
+
+
