--- a/src/styles.css
+++ b/src/styles.css
@@ -39,7 +39,7 @@
   padding: 5px;
 }
 
-#projectContainer {
+.projectContainer {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -51,7 +51,7 @@
   cursor: pointer;
 }
 
-#projectContainer p {
+.taskCounter {
   background-color: #d7263d;
   color: white;
   padding: 6px 10px;
@@ -61,8 +61,12 @@
   font-size: 17px;
 }
 
+.allTasksComplete {
+  background-color: green;
+}
+
 /* hover effect to make project selection clear for user*/
-#projectContainer:hover {
+.projectContainer:hover {
   background-color: #4c86a8;
 }
 
