--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,45 @@
   color: #313628;
 }
 
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 0 20px 20px 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+  display: flex;
+  flex-direction: column;
+}
+
+/* The Close Button */
+.close {
+  color: #000000;
+  font-size: 24px;
+  font-weight: bold;
+  float: right;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 #contentContainer {
   height: 100vh;
   width: 100vw;
@@ -102,22 +141,22 @@
 }
 
 .taskContent h2 {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .taskContent {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  width: 100%;
 }
 
 .taskContent p {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .btnDeleteTask {
-    margin-right: 15px;
+  margin-right: 15px;
 }
 
 .lowPriority {
@@ -133,26 +172,24 @@
 }
 
 #checkboxContainer {
-    margin: 15px;
+  margin: 15px;
 }
 
 #taskCheckbox {
-    width: 22px;
-    height: 22px;
-    cursor: pointer;
+  width: 22px;
+  height: 22px;
+  cursor: pointer;
 }
 
-.btnDeleteTask img{
-    margin-top: 5px;
-    height: 20px;
-    width: auto;
-    color: red;
-    cursor: pointer;
+.btnDeleteTask img {
+  margin-top: 5px;
+  height: 20px;
+  width: auto;
+  color: red;
+  cursor: pointer;
 }
 
 .taskComplete {
   text-decoration: line-through;
   opacity: 50%;
 }
-
-
