--- a/src/styles.css
+++ b/src/styles.css
@@ -15,7 +15,7 @@
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  background-color: rgba(0, 0, 0, 0.697); /* Black w/ opacity */
 }
 
 /* Modal Content/Box */
@@ -24,7 +24,7 @@
   margin: 15% auto; /* 15% from the top and centered */
   padding: 0 20px 20px 20px;
   border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+  width: 40%; /* Could be more or less, depending on screen size */
   display: flex;
   flex-direction: column;
 }
@@ -42,6 +42,33 @@
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+#modalMainSection > div{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+#modalMainSection > div > label {
+  font-size: 18px;
+}
+
+#modalMainSection > div > input {
+  width: 60%;
+  font-size: 18px;
+  padding-left: 5px;
+}
+
+#modalMainSection > div > button {
+  padding: 5px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+#errorMessage {
+  color:  red;
 }
 
 #contentContainer {
@@ -64,12 +91,14 @@
   margin-bottom: 50px;
   justify-content: space-between;
   padding: 0px 20px 10px 20px;
+  border-bottom: 10px ridge #6f9283;
 }
 
 #btnAddProject {
   font-size: 30px;
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
 
 #btnAddProject img {
